fix: Fix the Codec dependency conflict to rpc and provide default name for ScopedBeanFactory for reigistered bean